--- a/index.html
+++ b/index.html
@@ -27,5 +27,51 @@
             </div>
         </div>
     </header>
+    <main>
+        <!-- service section -->
+        <section id="service-container">
+            <div class="service-description">
+                <button class="primary-btn btn-radius">SERVICE LIST</button>
+                <h1 class="title"><span class="primary-color">Services</span> We Can Help You With !</h1>
+                <p class="p-primary">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra libero habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.</p>
+                <ol>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                </ol>
+                <div class="author">
+                    <div class="author-profile">
+                        <img class="profile-img"src="asset/image/author.jpg" alt="" srcset="">
+                        <div class="author-designation">
+                            <h4>George Smith</h4>
+                            <h5>CEO, Director</h5>
+                        </div>
+                    </div>
+                    <button class="primary-btn btn-radius primary-color">MORE DETAILS</button>
+                </div>
+            </div>
+            <div class="service-items">
+                <div class="tow-item-conainer">
+                    <div class="item">
+                        <img src="asset/icons/coding.png" alt="">
+                        <h3>Website Development</h3>
+                    </div>
+                    <div class="item">
+                        <img src="asset/icons/bar-chart.png" alt="">
+                        <h3>Graphics and Skecth Designing</h3>
+                    </div>
+                </div>
+                <div class="tow-item-conainer">
+                    <div class="item">
+                        <img src="asset/icons/startup.png" alt="g">
+                        <h3>SEO & Content Writin</h3>
+                    </div>
+                    <div class="item">
+                        <img src="asset/icons/digital-marketing.png" alt="">
+                        <h3>Digital Market Planning</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
