--- a/index.html
+++ b/index.html
@@ -52,26 +52,41 @@
             <div class="service-items">
                 <div class="tow-item-conainer">
                     <div class="item">
-                        <img src="asset/icons/coding.png" alt="">
+                        <img class="icon-img" src="asset/icons/coding.png" alt="">
                         <h3>Website Development</h3>
                     </div>
                     <div class="item">
-                        <img src="asset/icons/bar-chart.png" alt="">
+                        <img class="icon-img" src="asset/icons/bar-chart.png" alt="">
                         <h3>Graphics and Skecth Designing</h3>
                     </div>
                 </div>
                 <div class="tow-item-conainer">
                     <div class="item">
-                        <img src="asset/icons/startup.png" alt="g">
+                        <img class="icon-img" src="asset/icons/startup.png" alt="g">
                         <h3>SEO & Content Writin</h3>
                     </div>
                     <div class="item">
-                        <img src="asset/icons/digital-marketing.png" alt="">
+                        <img class="icon-img" src="asset/icons/digital-marketing.png" alt="">
                         <h3>Digital Market Planning</h3>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- appointment section -->
+        <section id="appointment-section">
+            <div class="appointment-call">
+                <img class="icon-img" src="asset/icons/phone-call.png" alt="" srcset="">
+                <div class="contact">
+                    <h4>GET A FREE CONSULTATION</h4>
+                    <h2>987 233 000</h2>
+                </div>
+            </div>
+            <div class="appointment-details">
+                <p class="p-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet minus cupiditate facilis! Necessitatibus autem tempora officiis inventore quis omnis quidem</p>
+            </div>
+            <button class="primary-btn btn-radius">MAKE APPOINTMENT</button>
+        </section>
+
     </main>
 </body>
 </html>
