--- a/index.html
+++ b/index.html
@@ -77,16 +77,38 @@
             <div class="appointment-call">
                 <img class="icon-img" src="asset/icons/phone-call.png" alt="" srcset="">
                 <div class="contact">
-                    <h4>GET A FREE CONSULTATION</h4>
-                    <h2>987 233 000</h2>
+                    <h5>GET A FREE CONSULTATION</h5>
+                    <h1>987 233 000</h1>
                 </div>
             </div>
             <div class="appointment-details">
-                <p class="p-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet minus cupiditate facilis! Necessitatibus autem tempora officiis inventore quis omnis quidem</p>
+                <p class="p-primary">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro
+                    viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.</p>
             </div>
             <button class="primary-btn btn-radius">MAKE APPOINTMENT</button>
         </section>
-
+        <!-- blog section -->
+        <section id="blog-section">
+            <h1 class="title"><span class="primary-color">Blog </span>& News From Us!</h1>
+            <p class="p-primary">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! Non officiis, id <br>natus non nisl provident justo.</p>
+            <div class="cards">
+                <div class="card">
+                    <img src="asset/image/blog-1.jpg" alt="" class="card-img">
+                    <h1 class="scale ">Maxime rhoncus aliquet sint eu accusantium illum.</h1>
+                    <p class="p-primary scale">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+                <div class="card">
+                    <img src="asset/image/blog-2.jpg" alt="" class="card-img">
+                    <h1 class="scale">Maxime rhoncus aliquet sint eu accusantium illum.</h1>
+                    <p class="p-primary scale">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+                <div class="card">
+                    <img src="asset/image/blog-3.jpg" alt="" class="card-img">
+                    <h1 class="scale">Maxime rhoncus aliquet sint eu accusantium illum.</h1>
+                    <p class="p-primary scale">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
