footer section done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <header>
@@ -110,5 +111,45 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section id="footer-secion">
+            <div class="footer-area">
+                <div class="agency-media">
+                    <img src="asset/logo/logo.png" alt="" srcset="">
+                    <p class="footer-paragrap primary-margin">Auctor blandit dolorem primis eius odit soluta molestie? Malesuada elementum aut doloremque labo.</p>
+                    <div class="media">
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                </div>
+                <div class="agency-link">
+                    <h3>Useful Links</h3>
+                    <li class="primary-margin">About Us</li>
+                    <li class="primary-margin">Careers</li>
+                    <li class="primary-margin">News & Articles</li>
+                    <li class="primary-margin">Legal Notice</li>
+                </div>
+                <div class="agency-suppot">
+                    <h3>Supports</h3>
+                    <li class="primary-margin">Help Center</li>
+                    <li class="primary-margin">FAQ</li>
+                    <li class="primary-margin">Contact Us</li>
+                    <li class="primary-margin">Parent Community</li>
+                </div>
+                <div class="contact">
+                    <h3>Contact Information</h3>
+                    <p class="primary-margin">Feel free to contact & reach us !!</p>
+                    <li class="primary-margin">3557 Derek Drive, Orlando, Florida</li>
+                    <li class="primary-margin">+1(456)657-887</li>
+                    <li class="primary-margin">info@domain.com</li>
+                </div>
+            </div>
+            <div class="copyright">
+                <hr>
+                <p class="copyright-letter">Copyright © 2022 Agence. All rights reserved.</p>
+            </div>
+        </section>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/69ff3c5f3c.js" crossorigin="anonymous"></script>
 </body>
 </html>
